# celestials-closet

./: .gitignore  Cargo.toml  Containerfile  README.md  build.rs  database.db  flake.nix  result
assets/: ado.jpg.opt-2  beabadoobee.jpg.opt-2  bocchi-the-rock.jpg.opt-2  deco-27.jpg.opt-2  ed25519.txt  frieren.jpg.opt-2  frieren.webp.opt-2  girls-band-cry.jpg.opt-2  girls-last-tour.webp.opt-2  hikaru.webp.opt-2  inabakumori.jpg.opt-2  iyowa.jpg.opt-2  kessoku-band.jpg.opt-2  lycoris-recoil.jpg.opt-2  makeine.png.opt-2  mimosa-confessions.jpg.opt-2  natori.jpg.opt-2  needy-streamer-overload.png.opt-2  nier-automata.jpg.opt-2  niki.jpg.opt-2  oneko.js  oshi-no-ko.webp.opt-2  persona-5-royal.jpg.opt-2  profile.jpg.opt-2  takopi.webp.opt-2  tricot.jpg.opt-2  wisp.jpg.opt-2  witch-hat-atlier.jpg.opt-2  yorushika.png.opt-2  zutomayo.jpg.opt-2
blogs/: building-my-first-keyboard.md  markdown-test.md
posts/: building-my-first-keyboard.md  celestials-closet.md  markdown-test.md
src/: args.rs  assets.rs  database.rs  errors.rs  main.rs  routes.rs
src/routes/: blog.rs  index.rs  personal.rs  posts.rs  projects.rs  rejections.rs
static/: oneko.js
styles/: _base.scss  _colors.scss  _highlighting.scss  _sizes.scss  _typography.scss  _util.scss  base.scss  index.scss  oneko.scss  personal.scss  post.scss  projects.scss
templates/: base.html  blog.html  blog_post.html  htmx.html  index.html  oneko.html  personal.html  post.html  posts.html  projects.html
