[package]
name = "celestials-closet"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

[build-dependencies]
eyre = "0.6.12"
proc-macro2 = "1.0.93"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["simd", "html"] }
tree-sitter-highlight = "0.25.3"
tree-sitter-rust = "0.24.0"
tree-sitter-javascript = "0.23.1"
tree-sitter-html = "0.23.2"
html-escape = "0.2.13"
toml = "0.8.20"
pulldown-cmark-escape = { version = "0.11.0", features = ["simd"] }
image = { version = "0.25.6", default-features = false, features = ["webp", "png", "jpeg"] }

[dependencies]
askama = "0.14.0"
eyre = "0.6.12"
grass = { version = "0.13.4", features = ["macro"] }
log = "0.4.25"
pico-args = "0.5.0"
pretty_env_logger = "0.5.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3.7", features = ["compression-gzip"] }
